--- a/board/templates/detail.html
+++ b/board/templates/detail.html
@@ -1,76 +1,50 @@
 {%extends 'base.html'%}
 
 {% block content %}
-<style>
-.like-button {
-            display: inline-block;
-            position: relative;
-            font-size: 15px;
-            cursor: pointer;
-            float: left;
-        }
 
-        .like-button::before {
-            font-size: 3em;
-            color: #000;
-            content: '♥';
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-        }
+<center>
+    <br><br><br><br>
 
-        .like-button::after {
-            font-size: 3em;
-            color: #ff3252;
-            content: '♥';
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            -webkit-transform: translate(-50%, -50%) scale(0);
-            transform: translate(-50%, -50%) scale(0);
-            transition: -webkit-transform 0.2s;
-            transition: transform 0.2s;
-            transition: transform 0.2s, -webkit-transform 0.2s;
-        }
+    <div class="container">
 
-        .like-button.liked::after {
-            -webkit-transform: translate(-50%, -50%) scale(1.1);
-            transform: translate(-50%, -50%) scale(1.1);
-        }
+        <div class="card" style="width: 75rem;">
 
-</style>
+            <div class="card-body" style="border:3px solid #D0C3B4; ">
 
-     <center>   
-            <br><br><br><br>
-            
-        <div class="container">
-        
-                <div class="card" style="width: 75rem;">
+                <h5 class="card-title"> <i class="material-icons"><a href="board.html"></a>{{details.title}}</h5>
+                <p>{{ details.pub_date }}</p>
+                <p class="card-text">{{details.context}}</p>
+                <img height="300" width="600" ; src="{{ details.image.url }}" alt="댕댕이">
+                <br>
+                <hr style="color:#D7CEBF">
 
-                        <div class="card-body" style="border:3px solid #D0C3B4; ">
-                          
-                          <h5 class="card-title"> <i class="material-icons"><a href="board.html"></a>{{board.title}}</h5>
-                          <p>{{ board.pub_date }}</p>
-                          <p class="card-text">{{board.context}}</p>
-                          <img src="http://img.hani.co.kr/imgdb/resize/2018/0907/00502739_20180907.JPG"  style="width: 250px; height:auto;">  
-                          <br>
-                          <hr style="color:#D7CEBF">
-                          
-                          <button class="like-button"></button>
-                          <div class="clearfix">
-                            <a class="btn btn-light right" href="{% url 'delete' board.pk %}"> Delete </a>
-                            <a class="btn btn-light right" href="{% url 'update' board.pk %}"> Edit </a>
-                        </div>
-                        </div>
-                      
-                 </div>
-                 
-                 
-                  <script>
-                     document.querySelector('.like-button').addEventListener('click', (e) => { e.currentTarget.classList.toggle('liked'); });
-                  </script>  
-        
+                <div class="clearfix">
+                    <a class="btn btn-light right" href="{% url 'delete' details.pk %}"> Delete </a>
+                    <a class="btn btn-light right" href="{% url 'update' details.pk %}"> Edit </a>
+                    <a class="btn btn-light right" href="{%url 'board'%}">게시판으로</a>
+
+                </div>
+            </div>
+
+
+
+            <hr>
+            <form action="{% url 'comment_write' details.id%}" method="POST">
+                {% csrf_token %}
+                <input type="text" name="content" placeholder="댓글을 입력해주세요.">
+                <input type="submit" value="확인">
+            </form>
+            <hr>
+            {% for comment in details.comments.all %}
+            <div>
+                <p>{{ comment.comment_date }}</p>
+                <p>{{ comment.comment_body }}</p>
+            </div>
+            <hr>
+            {% empty %}
+            <p>No comments here yet</p>
+            {% endfor %}
         </div>
+    </div>
+</center>
 {%endblock%}
